[project]
name = "hierarchical-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "davidpanguana",email = "davidpanguana49@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "hierarchical_clustering", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
